# Contamination-Aware-Control-for-Retrieval-Augmented-Generation

./: .gitignore  PRD1.md  PRD4.md  README.md  TODO.md  pyproject.toml  requirements.txt
analysis_plots/: aggregated_metrics.csv
configs/: smoke_test.yaml  smoke_test_ambigdocs.yaml  smoke_test_faitheval.yaml  smoke_test_ramdocs.yaml
configs/baselines/: ambigdocs_llm_only.yaml  faitheval_llm_only.yaml  hybrid_rag.yaml  hybrid_rerank.yaml  llm_only.yaml  ramdocs_hybrid_rag.yaml  ramdocs_hybrid_rerank.yaml  ramdocs_llm_only.yaml  ramdocs_reduced_context.yaml  ramdocs_vanilla_rag.yaml  reduced_context.yaml  smoke_test.yaml  vanilla_rag.yaml
docs/: PRD AmbigDocs Error Review Dashboard.md  cluster-setup.md
human_checks/: ambigdocs_error_annotation_rubric.md  ambigdocs_error_summary.csv  ambigdocs_paper_ready_taxonomy.csv  ambigdocs_paper_ready_taxonomy.md  ambigdocs_stratified_error_samples.csv  ambigdocs_stratified_error_samples.jsonl  index.html
outputs/ambigdocs_llm_only/: evaluations.jsonl  predictions.jsonl  prompts.jsonl  run_config.yaml  summary_metrics.json
outputs/faitheval_llm_only/: evaluations.jsonl  inputs.jsonl  predictions.jsonl  prompts.jsonl  run_config.yaml  summary_metrics.json
outputs/hybrid_rag/: evaluations.jsonl  inputs.jsonl  predictions.jsonl  run_config.yaml  summary_metrics.json
outputs/hybrid_rerank/: evaluations.jsonl  evaluations.jsonl.bak  predictions.jsonl  (+2 more)
prd-docs/: PRD1.md  PRD2.md  PRD4.md  deep-research-report.md
slurm/: precache_datasets.sh  precache_models.sh  run_baselines.sh  run_baselines_72b.sh  smoke_test.sh
(+125 files in other folders)
