[project]
name = "rag-baseline"
version = "0.1.0"
description = "Baseline RAG Systems for Contamination-Aware Evaluation"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "datasets>=2.14",
    "torch>=2.0",
    "transformers>=4.35",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2",
    "vllm>=0.4",
    "numpy>=1.24",
    "jsonlines>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_baseline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring models or data",
    "slow: slow tests",
    "gpu: tests requiring GPU",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
